<resources>
    <string name="app_name">VampireSurvivors</string>
    <string name="item_lv_1_Whip">Attacks by piercing enemies left and right.</string>
    <string name="item_lv_1_MagicWand">Attack the nearest enemy.</string>
    <string name="item_lv_1_KingBible">Spins around to attack.</string>
    <string name="item_lv_1_FireWand">Fireballs are fired in a random direction.</string>
    <string name="item_lv_1_LightningRing">Strike a random enemy with lightning.</string>
    <string name="item_lv_1_Inc_Atk">Gain 10% increased damage.</string>
    <string name="item_lv_1_Dec_Cooltime">Cooldowns are reduced by 8%.</string>
    <string name="item_lv_1_Inc_BulletSpd">Increases projectile speed by 10%.</string>
    <string name="item_lv_2">Increase the number of projectiles by 1</string>
    <string name="item_lv_3">Increases attack damage by 10.</string>
    <string name="item_lv_4">Increase the number of projectiles by 1</string>
    <string name="item_lv_5">Increases attack damage by 20.</string>
    <string name="item_lv_6">Cooldowns are reduced by 25%.</string>
    <string name="item_lv_7">Increases attack damage by 10.</string>
    <string name="item_lv_8">Increase the number of projectiles by 1</string>
    <string name="item_name_Whip">Whip</string>
    <string name="item_name_MagicWand">Magic Wand</string>
    <string name="item_name_KingBible">King Bible</string>
    <string name="item_name_FireWand">Fire Wand</string>
    <string name="item_name_LightningRing">Lightning Ring</string>
    <string name="item_name_Inc_Atk">Spinach</string>
    <string name="item_name_Dec_Cooltime">Empty Tome</string>
    <string name="item_name_Inc_BulletSpd">Bracer</string>
    <string name="title_start">Start</string>
    <string name="title_settings">Settings</string>
    <string name="title_exit">Exit</string>
    <string name="settings_bgm">BGM</string>
    <string name="settings_sfx">Effect</string>
    <string name="back">Back</string>
    <string name="resume">Resume</string>
    <string name="restart">Restart</string>
    <string name="gameover_score">Score: %d</string>
    <string name="gameover_time">Survived %02d : %02d</string>
    <string name="title_score">Score</string>
    <string name="title_typeName">Name:</string>
</resources>