<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.app.TitleActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/mainmenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:layout_marginVertical="20dp"
            android:src="@mipmap/title" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/button_bg"
            android:onClick="onBtnStart"
            android:text="@string/title_start"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/button_bg"
            android:onClick="onBtnScore"
            android:text="@string/title_score"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/button_bg"
            android:onClick="onBtnSettings"
            android:text="@string/title_settings"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/button_bg"
            android:onClick="onBtnExit"
            android:text="@string/title_exit"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_typeName"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TypeNameHere"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:maxLength="10"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>